# book-management-service

book-management-service/: Justfile  main.py  pyproject.toml  requirements.txt
book-management-service/db/: db.py
book-management-service/db/model/: BookEntity.py
book-management-service/models/: BookDTO.py
book-management-service/router/: BookRouter.py
book-management-service/service/: BookService.py
fastapi-test/: main.py  pyproject.toml
fastapi-test/db/: db.py
fastapi-test/db/models/: book.py
fastapi-test/models/: book.py
fastapi-test/routers/: book.py
fastapi-test/services/: book_service.py
